@@ -10,6 +10,7 @@ BUG: Ticket#666 - TActiveRecord::deleteAll() method always requires a criteria o
 BUG: Ticket#670 - TDatePicker: Year Issue (Christophe)
 ENH: Ticket#577 - Added image button support for TPager (Qiang)
 ENH: Ticket#623 - TMemCache to support multiple servers (Carl)
+ENH: Ticket#664 - Added support to styling thead, tbody, tfoot of TDataGrid (Qiang)
 ENH: Ticket#667 - Added TFeedService.ContentType property (Qiang)
 ENH: Ticket#672 - ForceSecureConnection to THttpRequest (Carl)
 ENH: Ticket#678 - Improved DateTimeFormatInfo performance (Stever)
